--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,34 @@
+@font-face {
+    font-family: silk;
+    src: url(/fonts/slkscr.ttf);
+}
+
 h1 {
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: silk, sans-serif;
     color: blueviolet;
+    text-shadow: 2px 2px #420a8b;
+    font-size: 40px;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
 div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
 }
 
 p {
+    position: absolute;
+    left: 10px;
     z-index: 10;
-    color: black;
-    left: 15px;
-    top: 10px;
-    margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    color: rgb(181, 116, 242);
+    text-shadow: 1px 1px #772bda;
+    font-family: silk, sans-serif;
     font-weight: bold;
 }
